# swarm_construction

./: .gitignore  README.md  pyproject.toml  requirements.txt  swarm_construction.py
docs/: index.html  readme.md  search.js  swarm_construction.html
docs/swarm_construction/: agent.html  main.html  simulator.html
docs/swarm_construction/simulator/: analytics.html  colors.html  engine.html  object.html  shape.html
src/: agent.py  swarm_construction.py
swarm_construction/: agent.py  colors.py  main.py  simulation.py  simulation_engine.py  simulation_object.py
swarm_construction/shape/: basic_shape_create.py  shape_create_gui.py  shape_create_gui_greyscale.py  shape_creator.py  shape_creator_gs.py
swarm_construction/simulation/: colors.py  engine.py  object.py
swarm_construction/simulation/tests/: all.py  collision_detection.py  edge_following.py  movement_test.py  single_orbit.py
swarm_construction/simulator/: analytics.py  colors.py  display.py  engine.py  object.py  shape.py
swarm_construction/simulator/tests/: all.py  collision_detection.py  edge_following.py  movement_test.py  single_orbit.py  spatial_hashing.py
swarm_construction/tests/: all.py  localisation.py  shape_awareness.py  simple_agent_rules.py
tests/: all.py  collision_detection.py  edge_following.py  localisation.py  movement_test.py  shape_awareness.py  simple_agent_rules.py  single_orbit.py
